--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </section>
 
     <!-- WHAT YOU GET -->
-    <section id="value" class="section value">
+    <section id="waitlist" class="section value">
       <h2 class="section-title">What You Get As An Owner</h2>
       <p class="section-subtitle">Clear moves. No data digging. Decisions you can act on instantly.</p>
 
@@ -129,7 +129,7 @@
     </section>
 
     <!-- WAITLIST SECTION -->
-    <section id="waitlist" class="section waitlist">
+    <section class="section waitlist">
       <div class="waitlist-inner">
 
         <!-- LEFT SIDE -->
@@ -253,3 +253,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
